# baseapp_android

./: .gitignore  build.gradle  common.gradle  config.gradle  dependencies.gradle  keyfile.jks  settings.gradle
app/: build.gradle
app/debug/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: show.html
appclient/: build.gradle
appclient/src/main/: AndroidManifest.xml
appdemo/: build.gradle
appdemo/src/main/: AndroidManifest.xml
appkt/: build.gradle
appkt/debug/: output-metadata.json
appkt/src/main/: AndroidManifest.xml
appplugin/: build.gradle
appplugin/src/main/: AndroidManifest.xml
base/: build.gradle
base/src/main/: AndroidManifest.xml
doc/: KotlinGrammar.kt  android.md  c++.md
gradle/wrapper/: gradle-wrapper.properties
ktbase/: build.gradle
ktbase/src/main/: AndroidManifest.xml
lib_avi/: build.gradle
lib_avi/src/main/: AndroidManifest.xml
lib_base/: build.gradle
lib_base/libs/: rxpermissions.aar
lib_mpeg/: build.gradle
lib_mpeg/src/main/cpp/: CMakeLists.txt
mdindex/: av.md  menu.md
module_f/: .gitignore  .metadata  README.md  pubspec.yaml
module_f/.android/: build.gradle  local.properties
module_f/.android/Flutter/: build.gradle
module_f/.android/app/: build.gradle
module_f/.dart_tool/: package_config.json  package_config_subset
module_f/.ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh  podhelper.rb
module_f/.ios/Runner/: Info.plist
module_f/.ios/Runner.xcodeproj/: project.pbxproj
module_f/lib/: main.dart
module_f/lib/entity/: app_version_entity.dart  home_entity.dart  model_main.dart  rmd_emtity.dart
module_f/lib/global/: config.dart  constant.dart  global_model.dart
module_f/lib/net/: intercept.dart  net_api.dart  net_result.dart  net_utils.dart
module_f/lib/page_model/: home_model.dart  identify_code_model.dart  login_model.dart  menu_center_model.dart  mine_model.dart  msg_model.dart
module_f/lib/res/: colours.dart  dimens.dart  gaps.dart  source.dart  styles.dart
module_f/lib/router/: not_found_page.dart  router_utils.dart  routers.dart
module_f/lib/utils/: aes_util.dart  date_util.dart  ext_util.dart  image_util.dart  json_util.dart  user_util.dart
module_f/lib/web/: bridge_data.dart  bridge_util.dart
module_f/lib/widgets/: empt_message.dart  load_image.dart  my_app_bar.dart  my_button.dart  webview_page.dart
module_f/test/: widget_test.dart
module_jetpack/: build.gradle
module_jetpack/src/main/: AndroidManifest.xml
module_va/: build.gradle
module_va/src/main/: AndroidManifest.xml
mpeg/: build.gradle
mvp/: build.gradle
mvp/src/main/: AndroidManifest.xml
natives/: build.gradle  index.md
natives/src/main/: AndroidManifest.xml
show/: build.gradle
show/src/main/: AndroidManifest.xml
v2ray/: build.gradle
v2ray/src/main/: AndroidManifest.xml
(+664 files in other folders)
